err/indra.base.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/indra'...
Listing './lib/python3.5/site-packages/indra/base'...
Compiling './lib/python3.5/site-packages/indra/base/cllsd_test.py'...
***   File "./lib/python3.5/site-packages/indra/base/cllsd_test.py", line 35
    print '%r => %r' % (v, cllsd.llsd_to_xml(v))
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/indra/base/config.py'...
***   File "./lib/python3.5/site-packages/indra/base/config.py", line 100
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/indra/base/llsd.py'...
***   File "./lib/python3.5/site-packages/indra/base/llsd.py", line 897
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/indra/base/lluuid.py'...
***   File "./lib/python3.5/site-packages/indra/base/lluuid.py", line 236
    print uuid.toString()
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/indra/base/tests'...
Listing './lib/python3.5/site-packages/indra/util'...
Compiling './lib/python3.5/site-packages/indra/util/llmanifest.py'...
***   File "./lib/python3.5/site-packages/indra/util/llmanifest.py", line 169
    print """Usage:
    %(name)s [options] [destdir]
    Options:
    """ % nd
                   
                                
            
      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/indra/util/llversion.py'...
***   File "./lib/python3.5/site-packages/indra/util/llversion.py", line 82
    print "Failed to parse svn info output, resultfollows:"
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/indra/util/named_query.py'...
***   File "./lib/python3.5/site-packages/indra/util/named_query.py", line 141
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/indra.base-1.0.egg-info'...
Listing './lib/python3.5/site-packages/indra.util-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
